--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "jeroennoten/laravel-adminlte": "^3.14",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^11.31",
+        "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
         "laravolt/avatar": "^6.0",
